# jotform-api-qt

./: CMakeLists.txt  LICENSE  README.md  jotform.cpp  jotform.h  main.cpp
.github/workflows/: build.yml
